unpackaged/objects/Opportunity.object
<CustomObject>
  <businessProcesses>
    <fullName>DE-New Accountplans</fullName>
    <description>New Accountplans 2018 for DE</description>
    <isActive>true</isActive>
    <values>
      <fullName>In Progress</fullName>
    </values>
    <values>
      <fullName>Lost</fullName>
    </values>
    <values>
      <fullName>Won - Order Received</fullName>
    </values>
  </businessProcesses>
  <businessProcesses>
    <fullName>DENTAL</fullName>
    <description>This Opportunity Type shall be used for all Dental Opportunities.</description>
    <isActive>true</isActive>
    <values>
      <fullName>Lost</fullName>
    </values>
    <values>
      <fullName>Negotiating</fullName>
    </values>
    <values>
      <fullName>Prospecting</fullName>
    </values>
    <values>
      <fullName>Qualifying</fullName>
    </values>
    <values>
      <fullName>Won - Committed</fullName>
    </values>
    <values>
      <fullName>Won - Order Received</fullName>
    </values>
  </businessProcesses>
  <businessProcesses>
    <fullName>Dealers Community</fullName>
    <isActive>true</isActive>
    <values>
      <fullName>Closed Lost</fullName>
    </values>
    <values>
      <fullName>Closed Won</fullName>
    </values>
    <values>
      <fullName>Positioning Products</fullName>
    </values>
    <values>
      <fullName>Registered</fullName>
    </values>
  </businessProcesses>
  <businessProcesses>
    <fullName>GET</fullName>
    <description>For all Opportunities targeted at winning new customers for a new product</description>
    <isActive>true</isActive>
    <values>
      <fullName>Acquired</fullName>
    </values>
    <values>
      <fullName>Decision Maker OK</fullName>
    </values>
    <values>
      <fullName>Lost</fullName>
    </values>
    <values>
      <fullName>Negotiated</fullName>
    </values>
    <values>
      <fullName>Prospecting</fullName>
    </values>
    <values>
      <fullName>Trialed</fullName>
    </values>
  </businessProcesses>
  <businessProcesses>
    <fullName>GET Atlantis - D</fullName>
    <description>Opportunity stages for Dental Atlantis GET Opportunities</description>
    <isActive>true</isActive>
    <values>
      <fullName>1%3Ast Atlantis order invoiced</fullName>
    </values>
    <values>
      <fullName>10 Atlantis abutments ordered</fullName>
    </values>
    <values>
      <fullName>Closed - Cancelled</fullName>
    </values>
    <values>
      <fullName>Lost</fullName>
    </values>
    <values>
      <fullName>Positioning Atlantis</fullName>
    </values>
    <values>
      <fullName>Signed up for AWO</fullName>
    </values>
    <values>
      <fullName>Won</fullName>
    </values>
  </businessProcesses>
  <businessProcesses>
    <fullName>GET Restorative - D</fullName>
    <description>Opportunity stages for Dental Restorative GET Opportunities</description>
    <isActive>true</isActive>
    <values>
      <fullName>Closed - Cancelled</fullName>
    </values>
    <values>
      <fullName>Lost</fullName>
    </values>
    <values>
      <fullName>Positioning Products</fullName>
    </values>
    <values>
      <fullName>Trialing</fullName>
    </values>
    <values>
      <fullName>Won</fullName>
    </values>
  </businessProcesses>
  <businessProcesses>
    <fullName>GET Surgical - D</fullName>
    <description>Opportunity stages for Dental Surgical GET Opportunities.</description>
    <isActive>true</isActive>
    <values>
      <fullName>Closed - Cancelled</fullName>
    </values>
    <values>
      <fullName>Establishing Contact</fullName>
    </values>
    <values>
      <fullName>Lost</fullName>
    </values>
    <values>
      <fullName>Negotiating Terms</fullName>
    </values>
    <values>
      <fullName>Positioning Products</fullName>
    </values>
    <values>
      <fullName>Trialing</fullName>
    </values>
    <values>
      <fullName>Won - Kit and over 10 implants acquired</fullName>
    </values>
  </businessProcesses>
  <businessProcesses>
    <fullName>GROW</fullName>
    <description>For all Opportunities targeted at growing existing business</description>
    <isActive>true</isActive>
    <values>
      <fullName>%3E 25%25 Referred patients%2Fbusiness</fullName>
    </values>
    <values>
      <fullName>%3E 50%25 Referred patients%2Fbusiness</fullName>
    </values>
    <values>
      <fullName>%3E 80%25 Referred patients%2Fbusiness</fullName>
    </values>
    <values>
      <fullName>Building Network%2FBusiness</fullName>
    </values>
    <values>
      <fullName>Lost</fullName>
    </values>
    <values>
      <fullName>Network%2FBusiness Built</fullName>
    </values>
    <values>
      <fullName>Not Applicable</fullName>
    </values>
  </businessProcesses>
  <businessProcesses>
    <fullName>GROW Atlantis - D</fullName>
    <description>Opportunity stages for Dental Atlantis GROW Opportunities</description>
    <isActive>true</isActive>
    <values>
      <fullName>Closed - Cancelled</fullName>
    </values>
    <values>
      <fullName>Closed - Yearly Target not reached</fullName>
    </values>
    <values>
      <fullName>Closed - Yearly Target reached</fullName>
    </values>
    <values>
      <fullName>In Progress</fullName>
    </values>
  </businessProcesses>
  <businessProcesses>
    <fullName>GROW Surgical - D</fullName>
    <description>Opportunity stages for Dental Surgical GROW Opportunities.</description>
    <isActive>true</isActive>
    <values>
      <fullName>Closed - Cancelled</fullName>
    </values>
    <values>
      <fullName>In Progress</fullName>
    </values>
  </businessProcesses>
  <businessProcesses>
    <fullName>Global consumable process</fullName>
    <isActive>true</isActive>
    <values>
      <fullName>1 - Targeting</fullName>
    </values>
    <values>
      <fullName>5 - Evaluation</fullName>
    </values>
    <values>
      <fullName>7 - Closed WON</fullName>
    </values>
    <values>
      <fullName>8 - Closed LOST</fullName>
    </values>
  </businessProcesses>
  <businessProcesses>
    <fullName>Lightning Sales</fullName>
    <description>Lightning Sales Process</description>
    <isActive>true</isActive>
    <values>
      <fullName>0%2E Prospect</fullName>
    </values>
    <values>
      <fullName>1%2E Needs analysis</fullName>
    </values>
    <values>
      <fullName>2%2E Positioning products</fullName>
    </values>
    <values>
      <fullName>3%2E Proposal</fullName>
    </values>
    <values>
      <fullName>4%2E Negotiation</fullName>
    </values>
    <values>
      <fullName>Closed Lost</fullName>
    </values>
    <values>
      <fullName>Closed Won</fullName>
    </values>
  </businessProcesses>
  <businessProcesses>
    <fullName>NA Implants Inside Sales</fullName>
    <description>Used by the NA Implants Inside Sales team to track deal and relationship progress</description>
    <isActive>true</isActive>
    <values>
      <fullName>1%2E Profiling Account</fullName>
    </values>
    <values>
      <fullName>2%2E Advanced Profiling</fullName>
    </values>
    <values>
      <fullName>3%2E I Can Help You</fullName>
    </values>
    <values>
      <fullName>4%2E Move It Forward</fullName>
    </values>
    <values>
      <fullName>5%2E Follow Up</fullName>
    </values>
  </businessProcesses>
  <businessProcesses>
    <fullName>Ortho Stages</fullName>
    <description>Used in the Ortho implementation</description>
    <isActive>true</isActive>
    <values>
      <fullName>Ortho%3A In Progress</fullName>
    </values>
    <values>
      <fullName>Ortho%3A Lost</fullName>
    </values>
    <values>
      <fullName>Ortho%3A On Hold</fullName>
    </values>
    <values>
      <fullName>Ortho%3A Success</fullName>
    </values>
  </businessProcesses>
  <businessProcesses>
    <fullName>PSS - NA Clinical- D</fullName>
    <description>Sales stages used for NA PSS Opportunities</description>
    <isActive>true</isActive>
    <values>
      <fullName>1%2E Qualification</fullName>
    </values>
    <values>
      <fullName>2%2E Confirmation of Needs</fullName>
    </values>
    <values>
      <fullName>3%2E Support</fullName>
    </values>
    <values>
      <fullName>4%2E Overcoming Resistance</fullName>
    </values>
    <values>
      <fullName>5%2E Proposal Presented</fullName>
    </values>
    <values>
      <fullName>6%2E Order Placed</fullName>
    </values>
    <values>
      <fullName>7%2E Lost or Cancelled</fullName>
    </values>
  </businessProcesses>
  <businessProcesses>
    <fullName>PSS - NA LAB- D</fullName>
    <description>Used for North American Laboratory Opportunities</description>
    <isActive>true</isActive>
    <values>
      <fullName>1%2E Qualification</fullName>
    </values>
    <values>
      <fullName>2%2E Confirmation of Needs</fullName>
    </values>
    <values>
      <fullName>3%2E Proposal Presented</fullName>
    </values>
    <values>
      <fullName>4%2E First Case Sent</fullName>
    </values>
    <values>
      <fullName>5%2E Conversion Complete %2810th Case Sent%29</fullName>
    </values>
    <values>
      <fullName>6%2E Lost or Cancelled</fullName>
    </values>
  </businessProcesses>
  <businessProcesses>
    <fullName>Sirona Prospect</fullName>
    <description>Qualifying Sirona Prospects</description>
    <isActive>true</isActive>
    <values>
      <fullName>Contacted</fullName>
    </values>
    <values>
      <fullName>Customer Not Interested</fullName>
    </values>
    <values>
      <fullName>Customer Ordered</fullName>
    </values>
    <values>
      <fullName>Customer Quoted</fullName>
    </values>
    <values>
      <fullName>Demo Completed</fullName>
    </values>
    <values>
      <fullName>Demo Scheduled</fullName>
    </values>
    <values>
      <fullName>Submitted</fullName>
    </values>
  </businessProcesses>
  <businessProcesses>
    <fullName>Trials %26 Tenders</fullName>
    <description>Used for trial and tenders opportunities</description>
    <isActive>true</isActive>
    <values>
      <fullName>Customer Not Interested</fullName>
    </values>
    <values>
      <fullName>Customer Ordered</fullName>
    </values>
    <values>
      <fullName>Customer Quoted</fullName>
    </values>
    <values>
      <fullName>Redundant</fullName>
    </values>
    <values>
      <fullName>Trialing</fullName>
    </values>
    <values>
      <fullName>Won</fullName>
    </values>
  </businessProcesses>
  <businessProcesses>
    <fullName>US%3A CEREC Equipment Opportunity Pipeline</fullName>
    <description>Used to track CEREC Equipment Pipeline</description>
    <isActive>true</isActive>
    <values>
      <fullName>1 - Prospect %26 Pipeline</fullName>
    </values>
    <values>
      <fullName>2 - Demo Scheduled</fullName>
    </values>
    <values>
      <fullName>3 - Demo Completed</fullName>
    </values>
    <values>
      <fullName>4 - Quote</fullName>
    </values>
    <values>
      <fullName>5 - Pending</fullName>
    </values>
    <values>
      <fullName>6 - Signed</fullName>
    </values>
    <values>
      <fullName>7 - Closed WON</fullName>
    </values>
    <values>
      <fullName>8 - Closed LOST</fullName>
    </values>
  </businessProcesses>
  <businessProcesses>
    <fullName>US%3A Midwest Opportunity Pipeline</fullName>
    <description>Used to track the Midwest Pipeline in the US</description>
    <isActive>true</isActive>
    <values>
      <fullName>1 - Targeting</fullName>
    </values>
    <values>
      <fullName>2 - Qualification</fullName>
    </values>
    <values>
      <fullName>3 - Demo</fullName>
    </values>
    <values>
      <fullName>4 - Decision Making</fullName>
    </values>
    <values>
      <fullName>5 - Quoted</fullName>
    </values>
    <values>
      <fullName>6 - Signed</fullName>
    </values>
    <values>
      <fullName>7 - Closed WON</fullName>
    </values>
    <values>
      <fullName>8 - Closed LOST</fullName>
    </values>
  </businessProcesses>
  <businessProcesses>
    <fullName>US%3A Preventive Opportunities</fullName>
    <description>Used in the Americas CCO to track Hygiene Sales Deals</description>
    <isActive>true</isActive>
    <values>
      <fullName>Demo</fullName>
    </values>
    <values>
      <fullName>Lost</fullName>
    </values>
    <values>
      <fullName>Scheduled</fullName>
    </values>
    <values>
      <fullName>Won</fullName>
    </values>
  </businessProcesses>
  <businessProcesses>
    <fullName>US%3A RCO Pipeline Process</fullName>
    <description>Used to track USC: Restorative, USC: Hygiene, USC: Celtra Consumables, USC: Prosthetics Pipelines</description>
    <isActive>true</isActive>
    <values>
      <fullName>1 - Prospect %26 Pipeline</fullName>
    </values>
    <values>
      <fullName>2 - Targeting</fullName>
    </values>
    <values>
      <fullName>3 - Qualifiying</fullName>
    </values>
    <values>
      <fullName>4 - Decision Making</fullName>
    </values>
    <values>
      <fullName>5 - Evaluation</fullName>
    </values>
    <values>
      <fullName>6 - Closed%2FWon</fullName>
    </values>
    <values>
      <fullName>7%2E Lost or Cancelled</fullName>
    </values>
  </businessProcesses>
  <businessProcesses>
    <fullName>US%3A Technology Opportunity Pipeline</fullName>
    <isActive>true</isActive>
    <values>
      <fullName>Inactive</fullName>
    </values>
    <values>
      <fullName>Lead</fullName>
    </values>
    <values>
      <fullName>Lost</fullName>
    </values>
    <values>
      <fullName>Presentation</fullName>
    </values>
    <values>
      <fullName>Proposal</fullName>
    </values>
    <values>
      <fullName>Qualified Prospect</fullName>
    </values>
    <values>
      <fullName>Signed</fullName>
    </values>
    <values>
      <fullName>Won</fullName>
    </values>
  </businessProcesses>
  <businessProcesses>
    <fullName>US%3A inLab Opportunity Pipeline</fullName>
    <description>Used to track inLab Opportunities in the US</description>
    <isActive>true</isActive>
    <values>
      <fullName>1 - Targeting</fullName>
    </values>
    <values>
      <fullName>2 - Qualification</fullName>
    </values>
    <values>
      <fullName>3 - Demo</fullName>
    </values>
    <values>
      <fullName>4 - Milling Results</fullName>
    </values>
    <values>
      <fullName>5 - Quoted</fullName>
    </values>
    <values>
      <fullName>6 - Signed</fullName>
    </values>
    <values>
      <fullName>7 - Closed WON</fullName>
    </values>
    <values>
      <fullName>8 - Closed LOST</fullName>
    </values>
  </businessProcesses>
  <fields>
    <fullName>AP_Progress_Status_ORTH__c</fullName>
    <description>Green = less than 60 days in same stage
            Yellow = 60 - 90 days in same stage
            Red = more than 90 days in same stage</description>
    <formula>IF( OR( RecordTypeId = "01220000000oo0M" ),

            IF( Stage_Duration__c &lt;= 60 , IMAGE("/img/samples/light_green.gif","Green Flag"),

            IF(Stage_Duration__c &gt;= 90, IMAGE("/img/samples/light_red.gif", "Red Flag"), IMAGE("/img/samples/light_yellow.gif", "Yellow Flag"))

            ), "Not Applicable"
            )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Green = less than 60 days in same stage
            Yellow = 60 - 90 days in same stage
            Red = more than 90 days in same stage</inlineHelpText>
    <label>AP Progress Status (ORTH)</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>ATL_Abuts_Potential_Year__c</fullName>
    <description>This field shows the Total Yearly Atlantis Abutments potential on the Account associated with this Opportunity. It is taken from the Account record and can therefore only be changed there.</description>
    <formula>Account.ATL_Abut_Potential_Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field shows the Total Yearly Atlantis Abutment potential on the Account associated with this Opportunity. It is taken from the Account record and can therefore only be changed there.</inlineHelpText>
    <label>ATL Abut's Potential/Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>ATL_ISUS_Potential_Year__c</fullName>
    <formula>Account.ATL_ISUS_Potential_Year__c</formula>
    <label>ATL ISUS Potential/Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>ATL_Sales_YTD_vs_Opp_ty_Amount__c</fullName>
    <description>This field shows the % of fulfillment comparing estimated Atlantis Sales CY (Opportunity Amount) and the actual sales YTD (Total Atlantis Sales YTD).</description>
    <formula>Sales_ATL_YTD__c /Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field shows the % of fulfillment comparing estimated Atlantis Sales CY (Opportunity Amount) and the actual sales YTD (Total Atlantis Sales YTD).</inlineHelpText>
    <label>% Sales ATL YTD vs Opp'ty Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
  </fields>
  <fields>
    <fullName>AWO_Customer__c</fullName>
    <formula>IF( Account.Atlantis_Web_Order_Customer__c=true,"Yes","No")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AWO Customer?</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Accomplishments_To_Date__c</fullName>
    <description>Please enter here the accomplishments you have done to date in order to win the targeted business.</description>
    <inlineHelpText>Please enter here the accomplishments you have done to date in order to win the targeted business.</inlineHelpText>
    <label>Accomplishments To Date</label>
    <length>4000</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>AccountProgramMember__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>https://dentsplysirona.lightning.force.com/lightning/r/Project__c/a1T6M0000050T5yUAE/view</description>
    <label>Account Program Member</label>
    <referenceTo>LoyaltyProgramParticipant__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Account_Country_Ortho__c</fullName>
    <description>Used for Tools to be Used (Ortho)</description>
    <inlineHelpText>Please select the country of the Account</inlineHelpText>
    <label>Account Country (ORTH)</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>Austria</fullName>
        </value>
        <value>
          <fullName>Belarus</fullName>
        </value>
        <value>
          <fullName>Belgium</fullName>
        </value>
        <value>
          <fullName>France</fullName>
        </value>
        <value>
          <fullName>Germany</fullName>
        </value>
        <value>
          <fullName>Iberia</fullName>
        </value>
        <value>
          <fullName>Indonesia</fullName>
        </value>
        <value>
          <fullName>Kazakhstan</fullName>
        </value>
        <value>
          <fullName>Luxemburg</fullName>
        </value>
        <value>
          <fullName>Malaysia</fullName>
        </value>
        <value>
          <fullName>Netherlands</fullName>
        </value>
        <value>
          <fullName>Philippines</fullName>
        </value>
        <value>
          <fullName>Switzerland</fullName>
        </value>
        <value>
          <fullName>Ukraine</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Account_Est_Sales_CY__c</fullName>
    <description>COS field used for North America Dental.</description>
    <formula>Account.Est_Sales_CY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>"Acct Projected Yearly Sales" comes from the Account page. To change the value, go the the Account page.</inlineHelpText>
    <label>Account Est Sales CY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Account_Loyalty_Implants__c</fullName>
    <description>Shows the Loyalty (Dental) as defined on the Account.</description>
    <formula>(Account.share_of_potential_implants__c)</formula>
    <inlineHelpText>Shows the Loyalty (Dental) as defined on the Account.</inlineHelpText>
    <label>Account Loyalty (Implants)</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Account_Plan_Type_IMPL__c</fullName>
    <label>Account Plan Type (IMPL)</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>GET</fullName>
        </value>
        <value>
          <fullName>KEEP/GROW</fullName>
        </value>
        <value>
          <fullName>MIS</fullName>
          <isActive>false</isActive>
          <label>MIS</label>
        </value>
        <value>
          <fullName>MIS_1</fullName>
          <label>MIS 1</label>
        </value>
        <value>
          <fullName>MIS 2</fullName>
        </value>
        <value>
          <fullName>MIS 3</fullName>
        </value>
        <value>
          <fullName>MIS 4</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Account_Plan_Type_Ortho__c</fullName>
    <description>Used in the Ortho implementation</description>
    <inlineHelpText>Select your type of Account Plan, GET (ex-Acquisition) or GROW (ex-Growth)</inlineHelpText>
    <label>Account Plan Type (ORTH)</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>GET</fullName>
        </value>
        <value>
          <fullName>GROW</fullName>
        </value>
        <value>
          <fullName>KEEP</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Account_Plan_Year__c</fullName>
    <formula>YEAR(CloseDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Plan Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Account_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Plan</label>
    <referenceTo>Account_Plan__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Account_Specialty_D__c</fullName>
    <description>Shows the Specialty (Dental) as defined on the Account.</description>
    <formula>TEXT (Account.Specialty_Dental__c)</formula>
    <inlineHelpText>Shows the Specialty (Dental) as defined on the Account.</inlineHelpText>
    <label>Account Specialty</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Account_Strategy_ATL_Abuts__c</fullName>
    <formula>Account.Account_Strategy_ATL_Abut__c</formula>
    <label>Account Strategy (ATL Abuts)</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Account_Strategy_ATL_ISUS__c</fullName>
    <formula>Account.Account_Strategy_ATL_ISUS__c</formula>
    <label>Account Strategy (ATL ISUS)</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Account_Strategy_Implants__c</fullName>
    <description>Shows the Account Strategy (Implants) as defined on Account.</description>
    <formula>Account.Account_Strategy_Implants__c</formula>
    <inlineHelpText>Shows the Account Strategy (Implants) as defined on Account.</inlineHelpText>
    <label>Account Strategy (Implants)</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Account_Strategy_ORTH__c</fullName>
    <description>Account Strategy as defined on the Account page</description>
    <formula>Account.Account_Strategy_SBU_ORTH__c</formula>
    <inlineHelpText>Account Strategy as defined on the Account page</inlineHelpText>
    <label>Account Strategy (ORTH)</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Account_Strategy__c</fullName>
    <label>Account Strategy</label>
    <length>20</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Account_Volume_D__c</fullName>
    <description>Shows the Volume (Implants) as defined on Account.</description>
    <formula>TEXT (Account.Volume_Implants__c)</formula>
    <inlineHelpText>Shows the Volume (Implants) as defined on Account.</inlineHelpText>
    <label>Account Volume (Implants)</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Accountplan_Type_Image__c</fullName>
    <formula>IF(
RecordType.Id = '0120J00000079mS' , IMAGE("/servlet/servlet.FileDownload?file=0150J000005oN3W", "",55, 444),
IF(AND(RecordType.Id = '0120J000000jnHR', ISPICKVAL(Account_Plan_Type_IMPL__c, "GET")),IMAGE("/servlet/servlet.FileDownload?file=0150J000005oN3b", "",53, 422),
IF(AND(RecordType.Id = '0120J000000jnHR', ISPICKVAL(Account_Plan_Type_IMPL__c, "KEEP/GROW")), IMAGE("/servlet/servlet.FileDownload?file=0150J000005oN3R", "",55, 438),
"")))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accountplan Type Image</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>ActualCloseDate__c</fullName>
    <description>Date when the opportunity was actually closed (as opposed to when it is planned to be closed).</description>
    <inlineHelpText>Date when the opportunity was actually closed (as opposed to when it is planned to be closed).</inlineHelpText>
    <label>Actual Close Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Actual_Sales_YTD_vs_Opportunity_Amount__c</fullName>
    <description>This field shows the % of fulfillment comparing Est Sales CY (Opportunity Amount) and the Sales CY (D). Only applicable when the Closing year equals the current year, otherwise it will be Zero</description>
    <formula>IF ( Amount = 0 || Sales_Dental_YTD__c= 0,0,Sales_Dental_YTD__c / Amount)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field shows the % of fulfillment comparing Est Sales CY (Opportunity Amount) and the Sales CY (D). Only applicable when the Closing year equals the current year, otherwise it will be Zero</inlineHelpText>
    <label>% Sales CY vs Est Sales CY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
  </fields>
  <fields>
    <fullName>Additional_Comment__c</fullName>
    <description>This is intended to add a comment in xSBU email template.
            request from this case:
            https://dentsplysirona.my.salesforce.com/5000J00001GF7AA</description>
    <inlineHelpText>If populated the field will be included in the email sent from 'E-mail the opportunity' button.</inlineHelpText>
    <label>Additional Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Amount_Incremental__c</fullName>
    <label>Amount - Annual Incremental Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Amount_This_Single_Initiative__c</fullName>
    <label>Amount - This Single Initiative</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Annuity__c</fullName>
    <inlineHelpText>Please add the annuity value of the product should the customer or contact choose to start purchasing the product</inlineHelpText>
    <label>Annuity Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Anticipated_Outcome__c</fullName>
    <description>COS field used for North America Dental.</description>
    <inlineHelpText>Brief description (max 500 char) on the anticipated outcome. Example: "Growth of referrals from 8 GPs to 12 GPs." OR "Increase of yearly Sales from $20,000 to $40.000".</inlineHelpText>
    <label>Anticipated Outcome</label>
    <length>500</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Apgar_Score__c</fullName>
    <formula>(CASE(
            TEXT( Was_the_Decision_Maker_Present__c),
            "No",0,
            "Stakeholder present, but not final decision-maker",1,
            "Final decision maker present",2,
            0))
            +
            (CASE(
            Text( Attention_paid_at_Customer_Meeting__c ),
            "Inattentive",0,
            "Intermittent Engagement",1,
            "Fully Engaged",2,
            0))
            +
            (CASE(
            Text(Customer_Opinion_of_Milling_Results__c),
            "Customer was disappointed",0,
            "Customer was satisfied",1,
            "Customer was impressed",2,
            0))
            +
            (CASE(
            Text(  Type_of_Questions_Asked__c  ),
            "None",0,
            "Basic",1,
            "In-depth",2,
            0))
            +
            (CASE(
            Text(Signature_Obtained__c),
            "No",0,
            "Agreed to consider",1,
            "Yes",2,
            0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apgar Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Approved_by_Sales_Manager__c</fullName>
    <inlineHelpText>Set by the SR's Manager to verify that the Account Plan is completely filled in and that the Account in itself is a good fit for an Account Plan. If Managers selects NO, the Account Plan will be visible on the Personal Assistant of the SR for completion.</inlineHelpText>
    <label>Approved by Sales Manager</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>No</fullName>
        </value>
        <value>
          <fullName>Yes</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Assign_Owner_Automatically__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assign Owner Automatically</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Astra_Tech_Implant_System__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this check box if the Opportunity is primarily aimed for restorative Astra Tech Implants system products.</description>
    <inlineHelpText>Check this check box if the Opportunity is primarily aimed for restorative Astra Tech Implants system products.</inlineHelpText>
    <label>Astra Tech Implant System</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Atlantis__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this check box if the Opportunity is primarily aimed for restorative Atlantis products.</description>
    <inlineHelpText>Check this check box if the Opportunity is primarily aimed for restorative Atlantis products.</inlineHelpText>
    <label>Atlantis</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Attention_paid_at_Customer_Meeting__c</fullName>
    <label>Attention paid at Customer Meeting?</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Fully Engaged</fullName>
        </value>
        <value>
          <fullName>Inattentive</fullName>
        </value>
        <value>
          <fullName>Intermittent Engagement</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Average_Monthly_CFEs_While_AP_Open__c</fullName>
    <description>This field calculates the number of IMPL CFEs/months during the time when the AP was open. The time is calculated from the date when the opportunity was created to a cosed date field or TODAY() if the Opportunity is still open.</description>
    <formula>(365.25/12)*(CFEs_While_AP_Open__c /
            IF( IsClosed = TRUE, IF( ISBLANK(ActualCloseDate__c),  CloseDate - DATEVALUE(CreatedDate),ActualCloseDate__c- DATEVALUE(CreatedDate)), TODAY()-DATEVALUE(CreatedDate)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Monthly CFEs While AP Open</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Business_Initiative__c</fullName>
    <label>Business Initiative</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Account Plan</fullName>
        </value>
        <value>
          <fullName>Top 5 Priorities</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>CFE_LY__c</fullName>
    <formula>Account.CFEs_Implants_CY_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CFE LY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFE_Target_CY__c</fullName>
    <description>planned Number of CFEs</description>
    <inlineHelpText>Geplabre anzahl an Besuchen dieses Jahr</inlineHelpText>
    <label>#CFE Target CY</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEsCompleted__c</fullName>
    <label># CFEs completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_CY__c</fullName>
    <formula>Account.CFEs_Implants_CY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># CFEs CY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_Last_6_Months_D__c</fullName>
    <description>Total number of completed CFEs Last 6 Months towards Account associated with Opportunity.</description>
    <formula>Account.CFEs_Implants_Last_6__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total number of completed CFEs Last 6 Months towards Account associated with Opportunity.</inlineHelpText>
    <label># CFEs Last 6 Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_Last_7_12_Months_D__c</fullName>
    <description>Total number of completed CFEs Last 7-12 months towards Account associated with Opportunity.</description>
    <formula>Account.CFEs_Implants_Last_7_12__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total number of completed CFEs Last 7-12 months towards Account associated with Opportunity.</inlineHelpText>
    <label># CFEs Last 7-12 Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
</CustomObject>